--- a/literate-org.org
+++ b/literate-org.org
@@ -1705,7 +1705,7 @@ The comment for a module is usually the first string in the Python file before a
   (list (cons "LITERATE_ORG_MODULE" module-name)
         (cons "header-args" (format ":noweb yes :tangle %s" path))
         (cons "header-args:tsx" (format ":noweb yes :noweb-ref %s-script :tangle no" module-name))
-        (cons "header-args:vue-html" (format ":noweb yes :noweb-ref %s-template :tangle no" module-name))
+        (cons "header-args:html" (format ":noweb yes :noweb-ref %s-template :tangle no" module-name))
         (cons "header-args:css" (format ":noweb yes :noweb-ref %s-style :tangle no" module-name))))
 #+END_SRC
 
@@ -1735,60 +1735,45 @@ To investigate the parse tree, we can use Emacs command [[https://github.com/ema
          (code-blocks nil))
     (cl-loop for index from 0 below count-of-children
              for node = (ts-get-nth-child root index)
+             for children-count = (tsc-count-children node)
              for node-type = (tsc-node-type node)
              for node-start-text = (tsc-node-text (tsc-get-nth-child node 0))
-             for node-end-text = (tsc-node-text (tsc-get-nth-child node 2))
+             for node-end-text = (tsc-node-text (tsc-get-nth-child node (1- children-count)))
              for node-body-noweb-ref = nil
-             for body = (tsc-node-text (tsc-get-nth-child node 1))
-             do (ecase node-type
-                  (script_element
-                   (setf node-body-noweb-ref (format "%s-script" module-name))
-                   (with-temp-buffer
-                     (insert body)
-                     (setf script-blocks
-                             (cons 
-                              (make-literate-org-code-block
-                               :title (format "Script %s" module-name)
-                               :language 'tsx
-                               :properties (list (cons "literate-lang" "tsx"))
-                               :level section-level)
-                              (cdr
-                               (literate-org-get-code-blocks-in-current-buffer
-                                'tsx
-                                (format "%s-script" module-name)
-                                (1+ section-level)))))))
-                  (element
-                   (setf node-body-noweb-ref (format "%s-template" module-name))
-                   (with-temp-buffer
-                     (insert body)
-                     (setf elements-blocks
-                             (cons (make-literate-org-code-block
-                                    :title (format "Template %s" module-name)
-                                    :language 'tsx
-                                    :properties (list (cons "literate-lang" "vue-html"))
-                                    :level section-level)
-                                   (cdr 
-                                    (literate-org-get-code-blocks-in-current-buffer
-                                     'html
-                                     (format "%s-template" module-name)
-                                     (1+ section-level)))))))
-                  (style_element
-                   (setf node-body-noweb-ref (format "%s-style" module-name))
-                   (with-temp-buffer
-                     (insert body)
-                     (setf style-blocks
-                             (cons 
-                              (make-literate-org-code-block
-                               :title (format "Style %s" module-name)
-                               :language 'tsx
-                               :properties (list (cons "literate-lang" "css"))
-                               :level section-level)
-                              (cdr
-                               (literate-org-get-code-blocks-in-current-buffer
-                                'css
-                                (format "%s-style" module-name)
-                                (1+ section-level))))))))
-             (let ((node-text (format "%s\n<<%s>>\n%s\n"
+             for body = (string-join (loop for i from 1 below (1- children-count)
+                                           collect (tsc-node-text (tsc-get-nth-child node i))))
+             do (labels ((%build (node-type language &optional (literate-lang (symbol-name language)))
+                           (values
+                            (format "<<%s-%s>>" module-name node-type)
+                            (with-temp-buffer
+                              (insert body)
+                              (cons 
+                               (make-literate-org-code-block
+                                :title (format " %s" node-type module-name)
+                                :properties (list (cons "literate-lang" literate-lang))
+                                :level section-level)
+                               (cdr
+                                (literate-org-get-code-blocks-in-current-buffer
+                                 language
+                                 (format "%s-" module-name node-type)
+                                 (1+ section-level))))))))
+                  (ecase node-type
+                    (script_element
+                     (multiple-value-bind (noweb-ref blocks)
+                         (%build "script" 'tsx)
+                       (setf node-body-noweb-ref noweb-ref
+                             script-blocks blocks)))
+                    (element
+                     (multiple-value-bind (noweb-ref blocks)
+                         (%build "template" 'html "vue-html")
+                       (setf node-body-noweb-ref noweb-ref
+                             elements-blocks blocks)))
+                    (style_element
+                     (multiple-value-bind (noweb-ref blocks)
+                         (%build "style" 'css)
+                       (setf node-body-noweb-ref noweb-ref
+                             style-blocks blocks)))))
+             (let ((node-text (format "%s\n%s\n%s\n"
                                       node-start-text
                                       node-body-noweb-ref
                                       node-end-text)))
